first iteration complete

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,26 +2,232 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+@layer base {
+  .text-stroke {
+    -webkit-text-stroke: 1px rgba(255, 255, 255, 0.3);
   }
-}
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  .gradient {
+    background: linear-gradient(
+      90deg,
+      rgba(255, 255, 255, 0) 0%,
+      rgba(255, 255, 255, 0.12) 100%
+    );
+  }
+
+  .gradient-2 {
+    background: linear-gradient(
+        90deg,
+        rgba(255, 255, 255, 0) 0%,
+        rgba(255, 255, 255, 0.12) 100%
+      ),
+      linear-gradient(
+        90deg,
+        rgba(229, 71, 255, 0) 36.27%,
+        rgb(255, 71, 149) 71.37%,
+        rgb(255, 204, 71) 92.98%
+      );
+  }
+
+  .newsletter-form {
+    --primary: #8c4ec2;
+    --primary-dark: #6b21a8;
+    --primary-darkest: #3b0764;
+    --input-placeholder: #a6accd;
+    --input-text: #646b8c;
+    --border-default: #e1e6f9;
+    --border-active: #8c4ec2;
+    --background: #fff;
+    --button-text: #ffffff;
+    --success: #8c4ec2;
+    --trails: rgb(140, 78, 194, 0.15);
+  }
+
+  .newsletter-form button {
+    --text-opacity: 1;
+    --success-x: -12px;
+    --success-stroke: 14px;
+    --success-opacity: 0;
+    --border-radius: 7px;
+    --overflow: hidden;
+    --x: 0px;
+    --y: 0px;
+    --rotate: 0deg;
+    --plane-x: 0px;
+    --plane-y: 0px;
+    --plane-opacity: 1;
+    --trails-stroke: 57px;
+    --left-wing-background: var(--primary);
+    --left-wing-first-x: 0%;
+    --left-wing-first-y: 0%;
+    --left-wing-second-x: 50%;
+    --left-wing-second-y: 0%;
+    --left-wing-third-x: 0%;
+    --left-wing-third-y: 100%;
+    --left-body-background: var(--primary);
+    --left-body-first-x: 50%;
+    --left-body-first-y: 0%;
+    --left-body-second-x: 50%;
+    --left-body-second-y: 100%;
+    --left-body-third-x: 0%;
+    --left-body-third-y: 100%;
+    --right-wing-background: var(--primary);
+    --right-wing-first-x: 50%;
+    --right-wing-first-y: 0%;
+    --right-wing-second-x: 100%;
+    --right-wing-second-y: 0%;
+    --right-wing-third-x: 100%;
+    --right-wing-third-y: 100%;
+    --right-body-background: var(--primary);
+    --right-body-first-x: 50%;
+    --right-body-first-y: 0%;
+    --right-body-second-x: 50%;
+    --right-body-second-y: 100%;
+    --right-body-third-x: 100%;
+    --right-body-third-y: 100%;
+    position: relative;
+    padding: 8px 0;
+    min-width: 100px;
+    text-align: center;
+    font-weight: 600;
+    color: var(--button-text);
+    border-radius: var(--border-radius);
+    transform: translateZ(0);
+    transition: opacity 0.25s, filter 0.25s;
+    -webkit-tap-highlight-color: transparent;
+  }
+
+  .newsletter-form button:not(.active) {
+    background: var(--primary);
+  }
+  .newsletter-form button .plane,
+  .newsletter-form button .trails {
+    pointer-events: none;
+    position: absolute;
+  }
+  .newsletter-form button .plane {
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    transform: translate(var(--x), var(--y)) rotate(var(--rotate)) translateZ(0);
+  }
+  .newsletter-form button .plane .left,
+  .newsletter-form button .plane .right {
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    opacity: var(--plane-opacity);
+    transform: translate(var(--plane-x), var(--plane-y)) translateZ(0);
+  }
+  .newsletter-form button .plane .left:before,
+  .newsletter-form button .plane .left:after,
+  .newsletter-form button .plane .right:before,
+  .newsletter-form button .plane .right:after {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    border-radius: var(--border-radius);
+    transform: translate(var(--part-x, 0.25%), var(--part-y, 0)) translateZ(0);
+    z-index: var(--z-index, 2);
+    background: var(--b, var(--left-wing-background));
+    -webkit-clip-path: polygon(
+      var(--first-x, var(--left-wing-first-x))
+        var(--first-y, var(--left-wing-first-y)),
+      var(--second-x, var(--left-wing-second-x))
+        var(--second-y, var(--left-wing-second-y)),
+      var(--third-x, var(--left-wing-third-x))
+        var(--third-y, var(--left-wing-third-y))
+    );
+    clip-path: polygon(
+      var(--first-x, var(--left-wing-first-x))
+        var(--first-y, var(--left-wing-first-y)),
+      var(--second-x, var(--left-wing-second-x))
+        var(--second-y, var(--left-wing-second-y)),
+      var(--third-x, var(--left-wing-third-x))
+        var(--third-y, var(--left-wing-third-y))
+    );
+  }
+  .newsletter-form button .plane .left:after {
+    --part-x: 0;
+    --z-index: 1;
+    --b: var(--left-body-background);
+    --first-x: var(--left-body-first-x);
+    --first-y: var(--left-body-first-y);
+    --second-x: var(--left-body-second-x);
+    --second-y: var(--left-body-second-y);
+    --third-x: var(--left-body-third-x);
+    --third-y: var(--left-body-third-y);
+  }
+  .newsletter-form button .plane .right:before {
+    --part-x: -0.25%;
+    --z-index: 2;
+    --b: var(--right-wing-background);
+    --first-x: var(--right-wing-first-x);
+    --first-y: var(--right-wing-first-y);
+    --second-x: var(--right-wing-second-x);
+    --second-y: var(--right-wing-second-y);
+    --third-x: var(--right-wing-third-x);
+    --third-y: var(--right-wing-third-y);
+  }
+  .newsletter-form button .plane .right:after {
+    --part-x: 0;
+    --z-index: 1;
+    --b: var(--right-body-background);
+    --first-x: var(--right-body-first-x);
+    --first-y: var(--right-body-first-y);
+    --second-x: var(--right-body-second-x);
+    --second-y: var(--right-body-second-y);
+    --third-x: var(--right-body-third-x);
+    --third-y: var(--right-body-third-y);
+  }
+  .newsletter-form button .trails {
+    display: block;
+    width: 33px;
+    height: 64px;
+    top: -4px;
+    left: 16px;
+    fill: none;
+    stroke: var(--trails);
+    stroke-linecap: round;
+    stroke-width: 2;
+    stroke-dasharray: 57px;
+    stroke-dashoffset: var(--trails-stroke);
+    transform: rotate(68deg) translateZ(0);
+  }
+  .newsletter-form button span {
+    display: block;
+    position: relative;
+    z-index: 4;
+    opacity: var(--text-opacity);
+  }
+  .newsletter-form button span.success {
+    z-index: 0;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 8px;
+    transform: translateX(var(--success-x)) translateZ(0);
+    opacity: var(--success-opacity);
+    color: var(--success);
+  }
+  .newsletter-form button span.success svg {
+    display: inline-block;
+    vertical-align: top;
+    width: 16px;
+    height: 16px;
+    margin: 4px 8px 0 0;
+    fill: none;
+    stroke-width: 2;
+    stroke-linecap: round;
+    stroke-linejoin: round;
+    stroke-dasharray: 14px;
+    stroke: var(--success);
+    stroke-dashoffset: var(--success-stroke);
+  }
 }
